service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolstore
  labels:
    helm.sh/chart: quickstart-java-service-0.2.0
    app.kubernetes.io/name: coolstore
    app.kubernetes.io/instance: coolstore
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    konveyor.io/archetype: "quarkus"
  annotations:
    konveyor.io/source-repository: https://github.com/konveyor-ecosystem/coolstore
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: coolstore
    app.kubernetes.io/instance: coolstore
